Update (massively) rust image

--- a/rust/Dockerfile
+++ b/rust/Dockerfile
@@ -1,9 +1,5 @@
-FROM ubuntu:zesty
+FROM rust:latest
 
-RUN apt-get update &&\
-    apt-get install -y curl gcc make curl libpq-dev
-
-RUN curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain nightly &&\
-    tail -1 ~/.profile >> ~/.bashrc
-
-WORKDIR /source
+RUN rustup default nightly
+RUN cargo install diesel_cli --no-default-features --features "postgres"
+RUN rustup component add rustfmt-preview --toolchain nightly
