Tag postgres to a buildable image

--- a/pg-temporal/Dockerfile
+++ b/pg-temporal/Dockerfile
@@ -1,4 +1,4 @@
-FROM postgres:alpine
+FROM postgres:10-alpine
 
 RUN apk add --no-cache --virtual build-deps musl-dev make gcc git && \
     git clone https://github.com/arkhipov/temporal_tables.git --depth 1 && \
