--- a/electron/Dockerfile
+++ b/electron/Dockerfile
@@ -1,4 +1,13 @@
 FROM node:latest
 
-RUN apt-get update &&\
-    apt-get install -y libgtk2.0-0 libgconf-2-4 libasound2 libxtst6 libxss1 libnss3 xvfb
+ENV ELECTRON_DISABLE_SANDBOX=true
+
+RUN apt-get update && \
+    apt-get install -y \
+        libgtk3.0 \
+        libgconf-2-4 \
+        libasound2 \
+        libxtst6 \
+        libxss1 \
+        libnss3 \
+        xvfb
